--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php" : ">5.3.6",
-        "symfony/framework-bundle": ">=2.1,<2.2-dev",
+        "symfony/framework-bundle": ">=2.1,<3.0",
         "codemitte/force-toolkit": "dev-master"
     },
     "autoload": {
